For issue #2. Label with icon into the header. Cut out a new icon from the wallpaper. Place the icon fixed into the headers mid and let it overlap. Place the rest of the label left and right next to the icon.

--- a/client/src/style/3v-forhair.scss
+++ b/client/src/style/3v-forhair.scss
@@ -1,6 +1,7 @@
-// Bulma Variables
+// Colors
 $color-base: #38a888;
 $color-invert: rgba(169, 164, 164, 0.32);
+$grass-green: rgb(27, 63, 27);
 
 // Layout Shapes
 $header-height: 50px;
